Returns more detailed neighbours
