# swagger_server/models/__init__.py
@@ -7,4 +7,6 @@ from swagger_server.models.error import Error
 from swagger_server.models.leaf import Leaf
 from swagger_server.models.nearest_leaf import NearestLeaf
 from swagger_server.models.neighbour import Neighbour
+from swagger_server.models.neighbour_relationship import NeighbourRelationship
+from swagger_server.models.neighbour_summary import NeighbourSummary
 from swagger_server.models.sample import Sample
